fixes firefox overlap and makes shoe slightly smaller

--- a/src/css/story/jordan.styl
+++ b/src/css/story/jordan.styl
@@ -8,12 +8,12 @@
 		padding 10rem 0 10rem 0
 
     .jordan
-			max-width 960px
+			max-width 800px
 			margin 1rem auto
 			width 100%
 			padding 0 1rem
-			display flex
-			flex-direction column
+			//display flex
+			//flex-direction column
 			+mq('bp-3')
 				margin -1rem auto 1rem auto
 			+mq('bp-4')
