--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -35,50 +35,52 @@ nav
 		+mq('bp-6')
 			background none
 
-	ul
-		display flex
-		flex-direction row
-		height 6.25rem
-	li
-		display flex
-		flex-direction column
-		width 8rem
-		padding 0.5rem 0.25rem 0 0.25rem
-		height auto
-		align-items center
-		transition 300ms
-		min-width 5rem
-		cursor pointer
-		opacity 0.5
-		transform scale(0.75)
-		transition all 300ms
-		user-select none
+	.nav-wrapper
 
-		&.is-active
-			border-bottom 3px solid darken(#4729fc, 20)
-			opacity 1
-			transform scale(1)
-			pointer-events none
-		&:hover
-			transform scale(1)
+		ul
+			display flex
+			flex-direction row
+			height 6.25rem
+		li
+			display flex
+			flex-direction column
+			width 8rem
+			padding 0.5rem 0.25rem 0 0.25rem
+			height auto
+			align-items center
+			transition 300ms
+			min-width 5rem
+			cursor pointer
+			opacity 0.5
+			transform scale(0.75)
+			transition all 300ms
+			user-select none
 
-		.image
-			margin 0 auto
-			width 80%
-			max-height 3rem
+			&.is-active
+				border-bottom 3px solid darken(#4729fc, 20)
+				opacity 1
+				transform scale(1)
+				pointer-events none
+			&:hover
+				transform scale(1)
 
-		.object-name
-			margin 1rem 0 0 0
-			text-align center
-			set-type-size('small', true)
-
-		.is-active
 			.image
-				width auto
+				margin 0 auto
+				width 80%
 				max-height 3rem
 
-		.object-name
-			font-weight 700
+			.object-name
+				margin 1rem 0 0 0
+				text-align center
+				set-type-size('small', true)
+
+			.is-active
+				.image
+					width auto
+					max-height 3rem
+
+			.object-name
+				font-weight 700
 
 	.under-ul
 		display flex
